--- a/app/src/main/res/layout/activity_shop_list.xml
+++ b/app/src/main/res/layout/activity_shop_list.xml
@@ -8,18 +8,19 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="@dimen/_15sdp">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:paddingHorizontal="@dimen/_15sdp"
-            android:gravity="right">
+            android:gravity="center_horizontal"
+            android:layout_marginTop="@dimen/_15sdp">
 
             <EditText
+                android:id="@+id/searchShopET"
                 android:layout_width="@dimen/_240sdp"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/_15ssp"
@@ -33,6 +34,10 @@
                 android:layout_height="@dimen/_35sdp"
                 android:background="@drawable/ic_account_box" />
         </LinearLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/shopListRV"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
     </LinearLayout>
 
 </RelativeLayout>
