--- a/app/src/main/res/layout/shop_list_item.xml
+++ b/app/src/main/res/layout/shop_list_item.xml
@@ -53,30 +53,31 @@
             <View
                 android:layout_width="@dimen/_250sdp"
                 android:layout_height="@dimen/_1sdp"
-                android:background="#D3D3D3"
                 android:layout_centerHorizontal="true"
-                android:layout_marginVertical="@dimen/_5sdp"/>
+                android:layout_marginVertical="@dimen/_5sdp"
+                android:background="#D3D3D3" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
-            <TextView
-                android:id="@+id/ratingTV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/ic_rating"
-                android:text=" 5.0"
-                android:textSize="@dimen/_15ssp"
-                android:textStyle="bold"/>
+
+                <TextView
+                    android:id="@+id/ratingTV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableLeft="@drawable/ic_rating"
+                    android:text=" 5.0"
+                    android:textSize="@dimen/_15ssp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/numberOfRatingTV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="23 Ratings"
-                    android:textSize="@dimen/_15ssp"
                     android:paddingLeft="@dimen/_10sdp"
-                    />
+                    android:text="23 Ratings"
+                    android:textSize="@dimen/_15ssp" />
 
             </LinearLayout>
 
