--- a/app/src/main/res/layout/shop_list_item.xml
+++ b/app/src/main/res/layout/shop_list_item.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="@dimen/_110sdp"
+    android:gravity="center_vertical">
 
     <LinearLayout
-        android:id="@+id/ll1"
+        android:id="@+id/clickableLL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:clickable="true"
         android:orientation="horizontal"
-        android:padding="@dimen/_15sdp">
+        android:paddingVertical="@dimen/_10sdp">
 
         <ImageView
             android:id="@+id/shopIconIV"
@@ -30,32 +32,21 @@
                 android:textSize="@dimen/_20ssp"
                 android:textStyle="bold" />
 
-            <LinearLayout
+
+            <TextView
+                android:id="@+id/statusTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:text="Opened"
+                android:textSize="@dimen/_15ssp" />
 
-                <TextView
-                    android:layout_width="@dimen/_60sdp"
-                    android:layout_height="wrap_content"
-                    android:text="Status : "
-                    android:textSize="@dimen/_15ssp" />
-
-                <TextView
-                    android:id="@+id/statusTV"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Opened"
-                    android:textSize="@dimen/_15ssp" />
-
-            </LinearLayout>
 
             <View
                 android:layout_width="@dimen/_250sdp"
                 android:layout_height="@dimen/_1sdp"
                 android:layout_centerHorizontal="true"
                 android:layout_marginVertical="@dimen/_5sdp"
-                android:background="#D3D3D3" />
+                android:background="#A9A9A9" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -75,8 +66,8 @@
                     android:id="@+id/numberOfRatingTV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="@dimen/_10sdp"
-                    android:text="23 Ratings"
+                    android:paddingLeft="@dimen/_5sdp"
+                    android:text="(23)"
                     android:textSize="@dimen/_15ssp" />
 
             </LinearLayout>
@@ -84,5 +75,6 @@
         </LinearLayout>
 
     </LinearLayout>
+
 
 </RelativeLayout>
