minor change in ui

--- a/app/src/main/res/layout/activity_shop_item_list.xml
+++ b/app/src/main/res/layout/activity_shop_item_list.xml
@@ -11,7 +11,7 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBar"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="@dimen/_170sdp"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
@@ -19,8 +19,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
-            app:expandedTitleMarginEnd="64dp"
-            app:expandedTitleMarginStart="48dp"
+            app:expandedTitleMarginEnd="@dimen/_50sdp"
+            app:expandedTitleMarginStart="@dimen/_50sdp"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <LinearLayout
