--- a/app/src/main/res/layout/activity_shop_menu_item_list.xml
+++ b/app/src/main/res/layout/activity_shop_menu_item_list.xml
@@ -100,8 +100,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_weight="1"
-                        android:drawableTop="@drawable/ic_delivery"
-                        android:text="Delivery"
+                        android:text="₹100\nDelivery"
                         android:textAlignment="center"
                         android:textColor="#000000"
                         android:textSize="@dimen/_15ssp"
