--- a/app/src/main/res/layout/shop_list_item.xml
+++ b/app/src/main/res/layout/shop_list_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/_110sdp"
+    android:layout_height="@dimen/_120sdp"
     android:gravity="center_vertical">
 
     <LinearLayout
@@ -10,7 +10,8 @@
         android:layout_height="wrap_content"
         android:clickable="true"
         android:orientation="horizontal"
-        android:paddingVertical="@dimen/_10sdp">
+        android:paddingVertical="@dimen/_10sdp"
+        android:gravity="center_vertical">
 
         <ImageView
             android:id="@+id/shopIconIV"
@@ -27,10 +28,11 @@
                 android:id="@+id/restaurantNameTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Restaurant Name"
+                android:text="Restaurant Name\n"
                 android:textColor="#000000"
                 android:textSize="@dimen/_20ssp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:maxLines="2"/>
 
 
             <TextView
