--- a/app/src/main/res/layout/activity_order_items.xml
+++ b/app/src/main/res/layout/activity_order_items.xml
@@ -1,33 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:layout_width="@dimen/_12sdp"
-android:layout_marginLeft="@dimen/_5sdp"
-        android:id="@+id/typeIV"
-        android:layout_marginTop="@dimen/_2sdp"
-        android:layout_height="@dimen/_12sdp"
-        android:src="@drawable/veg" />
+
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/_10sdp"
-        android:layout_marginLeft="@dimen/_3sdp"
-        android:layout_marginTop="@dimen/_3sdp"
+        android:drawableLeft="@drawable/ic_vegetarian_mark"
         android:id="@+id/itemNameTV"
-        android:layout_toRightOf="@+id/typeIV"
-        android:text="Sev Puri x 1"
-        android:textSize="@dimen/_10sdp" />
-    <TextView
         android:layout_width="wrap_content"
-        android:id="@+id/eachItemCostTV"
+        android:gravity="center_horizontal"
+        android:layout_height="@dimen/_10sdp"
+        android:layout_marginLeft="@dimen/_5sdp"
         android:layout_marginTop="@dimen/_3sdp"
-        android:text="₹100"
+        android:text=" Sev Puri x 1"
+        android:textSize="@dimen/_8sdp" />
+
+    <TextView
+        android:id="@+id/eachItemCostTV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
+        android:layout_marginTop="@dimen/_3sdp"
         android:paddingRight="@dimen/_20sdp"
-        android:layout_height="wrap_content"/>
+        android:text="₹100" />
 
 </RelativeLayout>
